# pulse-agent

./: .env.example  .gitignore  Cargo.toml  IDE-AGENT-ARCHITECTURE.md  PROMPT_ENGINEERING_APPLIED.md  PULSE.md  README.md  ROADMAP.md  build-webview.js  cgmanifest.json  hermes-verify-main.rs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quick-start.bat  start-ide.bat  start.bat  start.ps1  test-frontend.html  test-pipeline.html  test-sse.html  tsconfig.json
.github/workflows/: build.yml  ci.yml
adapters/jetbrains/: README.md
adapters/standalone/: README.md
adapters/vscode/: package.json  tsconfig.json
adapters/vscode/gui/: pulse-chat.html
adapters/vscode/src/: acp-client.ts  extension.ts
adapters/vscode/src/continue-gui/: ContinueToPulseBridge.ts  ContinueWebviewProvider.ts
adapters/zed/: README.md
crates/surpassing-acp/: Cargo.toml
crates/surpassing-acp/src/: handlers.rs  lib.rs  lifecycle.rs  main.rs  protocol.rs  routing.rs  server.rs  transport.rs
crates/surpassing-acp/tests/: test_knowledge_graph.rs
crates/surpassing-core/: Cargo.toml
crates/surpassing-core/src/: async_utils.rs  error.rs  lib.rs  tracing.rs  types.rs
crates/surpassing-graph/: Cargo.toml
crates/surpassing-graph/src/: graph.rs  query.rs  store.rs
crates/surpassing-indexer/: Cargo.toml
crates/surpassing-indexer/examples/: demo.rs
crates/surpassing-indexer/src/: lib.rs  parser.rs  symbols.rs  watcher.rs
crates/surpassing-memory/: Cargo.toml
crates/surpassing-memory/src/: lib.rs  search.rs  store.rs  tiers.rs
crates/surpassing-orchestrator/: Cargo.toml
crates/surpassing-orchestrator/src/: context_bus.rs  lib.rs  registry.rs  scheduler.rs
crates/surpassing-router/: Cargo.toml
crates/surpassing-router/src/: classifier.rs  lib.rs  registry.rs  router.rs
crates/surpassing-sandbox/: Cargo.toml
crates/surpassing-sandbox/src/: git.rs  lib.rs  limits.rs  runner.rs  sandbox.rs
crates/surpassing-sandbox/tests/: integration.rs
crates/surpassing-security/: Cargo.toml
crates/surpassing-security/src/: audit.rs  governance.rs  lib.rs  scanner.rs
docs/: 01-getting-started.md  02-architecture.md  03-acp-protocol.md  04-agents.md  05-memory.md  06-security.md  07-contributing.md  agent-per-loop-architecture.html
docs/adr/: 001-rust-core.md  README.md
hermes/: ide-spec-build.md  rules
python/agents/: acp_server.py  agent_loop.py  approval.py  context_engine.py  error_classifier.py  errors.py  iteration_budget.py  llm_client.py  mcp_client.py  memory_manager.py  memory_store.py  model_registry.py  model_registry.yaml  pipeline.py  prompt_assembly.py  prompt_blocks.py  reasoning_timeouts.py  session_db.py  tool_dispatch_helpers.py  tool_executor.py  tool_result_classification.py  tool_search.py  trajectory.py  turn_context.py  turn_finalizer.py  turn_retry_state.py
python/agents/pulse_lsp/: __init__.py  cli.py  client.py  context.py  eventlog.py  install.py  manager.py  protocol.py  range_shift.py  reporter.py  servers.py  workspace.py
python/agents/skills/: manager.py  types.py
python/agents/tests/: test_extract.py
python/agents/tools/: __init__.py  apply_edit.py  code_execution.py  debug_helpers.py  file_search.py  git_status.py  list_files.py  lsp_diagnostics.py  memory_read.py  memory_write.py  patch_tool.py  read_file.py  read_file_lines.py  run_command.py  session_search.py  skill_tool.py  terminal.py  think_tool.py  todo.py  web_extract.py  web_search.py
python/hermes_agents/: __init__.py  base.py  coder.py  debugger.py  orchestrator.py  planner.py  project_context.py  reviewer.py  run_pipeline.py  tester.py  types.py
python/hermes_ml/: __init__.py  embeddings.py  intent.py  llm_client.py  router.py
python/hermes_server/: __init__.py  acp_server.py  handlers.py  lifecycle.py
python/hermes_skills/: __init__.py  extractor.py  repository.py  types.py
python/tests/: __init__.py  test_coder_llm.py  test_planner.py  test_planner_llm.py  test_smoke.py
python/tests/integration/: __init__.py
python/tests/unit/: __init__.py
src/: agent.ts  agent.ts.bak  chat-participant.ts  config.ts  context-engine.ts  diff-decorations.ts  extension.ts  file-mention-provider.ts  flow-state.ts  inline-suggestions.ts  mcp-server.ts  memory-system.ts  memory.ts  multi-file-edit.ts  onboarding.ts  orchestrator.ts  rules-manager.ts  session-db.ts  skills-loader.ts  statusbar.ts  subagent-manager.ts  telemetry.ts  tool-registry.ts
src/tools/: agent-tools.ts  ambient.d.ts  android-tools.ts  audio-tools.ts  autofix-tools.ts  browser-tools.ts  build-tools.ts  change-tools.ts  desktop-tools.ts  file-tools.ts  git-tools.ts  image-gen-tools.ts  terminal-tools.ts  todo-tool.ts  vision-tools.ts  web-tools.ts
src/webview/: App.tsx  agent-api.ts  index.tsx  styles.css
src/webview/components/: BrowserCard.tsx  Icons.tsx  PermissionDock.tsx  QuestionDock.tsx  TodoPanel.tsx
tests/integration/: run.sh  test_integration.py
