[workspace]
members = [
    "crates/surpassing-core",
    "crates/surpassing-indexer",
    "crates/surpassing-graph",
    "crates/surpassing-acp",
    "crates/surpassing-orchestrator",
    "crates/surpassing-router",
    "crates/surpassing-memory",
    "crates/surpassing-sandbox",
    "crates/surpassing-security",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hermes Team <team@surpassing.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/surpassing/surpassing"
rust-version = "1.79"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
dashmap = "6.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
