[project]
name = "hermes-agents"
version = "0.1.0"
description = "Surpassing IDE Agent — Python agent implementations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anyio>=4.4",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "lancedb>=0.6",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "toml>=0.10",
    "watchdog>=4.0",
    "gitpython>=3.1",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.24",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
