[package]
name = "surpassing-acp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Agent Client Protocol (ACP) server — JSON-RPC 2.0 over stdio"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surpassing-core = { path = "../surpassing-core" }
surpassing-graph = { path = "../surpassing-graph" }
surpassing-indexer = { path = "../surpassing-indexer" }
clap = { workspace = true }
walkdir = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4"

[[bin]]
name = "surpassing"
path = "src/main.rs"
