[package]
name = "surpassing-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Semantic knowledge graph for code understanding in the Surpassing IDE Agent"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
surpassing-core = { path = "../surpassing-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
