[package]
name = "surpassing-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Persistent memory store — 5-tier memory system for the Surpassing IDE Agent"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
surpassing-core = { path = "../surpassing-core" }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
