[package]
name = "surpassing-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Multi-agent coordination and task scheduling for the Surpassing IDE Agent"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
surpassing-core = { path = "../surpassing-core" }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
