[package]
name = "surpassing-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Security scanning and governance — SAST, approval gates, and audit trails"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surpassing-core = { path = "../surpassing-core" }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
